--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,8 @@
-HOST_DB=''
-SECRET_JWT=''
-GOOGLE_CLIENT_ID=''
-GOOGLE_CLIENT_SECRET=''
-API_PORT=3000
+HOST_DB=
+SECRET_JWT=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK=
+FACEBOOK_CALLBACK=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
